# AI-Engineering-Challenge

./: .env.example  .gitignore  BUG_REPORT.md  BUG_REVIEW_QUEUE.md  FINAL_CALL_SELECTION.md  ITERATION_LOG.md  LIVE_CALL_PROGRESS.md  LIVE_CALL_READINESS.md  LOOM_RECORDING_CHECKLIST.md  LOOM_SCRIPT.md  Makefile  PUBLIC_REPOSITORY_AUDIT.md  README.md  SUBMISSION_FORM_READY.md  SUBMISSION_GAP_REPORT.md  SUBMISSION_STATUS.md  TRANSCRIPT_VALIDATION_REPORT.md  VOICE_SIM_BUG_REPORT.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  doc_paths.py  main.py  safety.py  submission.py
app/agent/: __init__.py  dry_run.py  patient_agent.py  planner.py  prompts.py  scenario_loader.py  state.py
app/analysis/: __init__.py  bug_reporter.py  evaluator.py  quality.py  recording_validation.py  schemas.py  transcript.py  validation.py
app/experiments/: __init__.py  runner.py
app/review/: __init__.py  router.py
app/storage/: __init__.py  artifacts.py  metadata.py  recording_builder.py
app/telephony/: __init__.py  client.py  media_stream.py  preflight.py  webhooks.py
app/voice/: __init__.py  audio.py  interruption.py  local_tts.py  stt.py  tts.py  turn_manager.py
docs/guides/: ARCHITECTURE.md  SCENARIOS.md  SETUP_CREDENTIALS.md
docs/reports/: BUG_REPORT.md  RECORDING_VALIDATION_REPORT.md
docs/submission/: FIRST_REAL_CALL_PLAN.md  MANUAL_CALL_REVIEW.md  (+2 more)
scenarios/: 01_simple_scheduling.yaml  02_reschedule.yaml  03_cancel.yaml  04_refill.yaml  05_office_hours.yaml  06_insurance.yaml  07_weekend_request.yaml  08_ambiguous_request.yaml  09_interruption.yaml  10_context_change.yaml  11_safety_escalation.yaml  12_repetition_recovery.yaml
scripts/: analyze_call.py  build_report.py  fetch_recording.py  preflight_live_call.py  rank_calls.py  replay_call.py  run_call.py  run_experiment.py  run_suite.py  run_voice_sim.py  submission_check.py  summarize_live_calls.py  transcribe_call.py  update_submission_checklist.py  validate_recordings.py  validate_scenarios.py  validate_transcripts.py
tests/: test_audio.py  test_dry_run.py  test_evaluator.py  test_number_guard.py  test_patient_agent.py  test_scenarios.py  test_submission_features.py  test_transcripts.py  test_turn_manager.py  test_voice_sim.py
(+3 files in other folders)
